style.css
/* fonts */
@font-face {
    font-family: 'MPLUS Rounded Bold';
    src: url('fonts/MPLUSRounded1c-Bold.ttf') format('truetype');
    font-weight: bold;
}

/* || common styles */
body{
    width: 100vw;
    height: 100vh;
    margin: 0;

    display: flex;
    justify-content: center;
    align-items: center;
}

div{
    background-color: #2E3440;
    border: solid #2E3440;
}

button{
    width: 8vh;
    height: 8vh;

    background-repeat: no-repeat;
    background-position: center;

    font-family: 'MPLUS Rounded Bold', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    font-size: 6vh;
    color: #ECEFF4;
    line-height: 8vh;

    border: solid #2E3440;
    border-radius: 2vh;
    box-sizing: border-box;

    display: flex;
    align-items: center;
    justify-content: center;
}


/* || frame properties*/

#calculator_container{
    width: 37vh;
    height: 63vh;

    border-radius: 2vh;

    display: flex;
    flex-wrap: wrap;
    align-content: space-evenly;
    justify-content: space-evenly;
}

/* || display properties */

#display {
    width: 35vh;
    height: 16vh;
    
    font-family: 'MPLUS Rounded Bold', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    font-size: 6vh;
    color: #ECEFF4;

    box-sizing: border-box;
    border: solid #3b4252;
    background-color: #3b4252;
    border-radius: 2vh;

    display: flex;
    flex-direction: column;
}

.display_inner {
    height: 8vh;

    font-family: 'MPLUS Rounded Bold', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;

    box-sizing: border-box;
    border: solid #3b4252;
    background-color: #3b4252;
    border-radius: 2vh;
}

#display_current {
    font-weight: bold;
    font-size: 4vh;
    vertical-align: middle;
    line-height: 8vh;
    color: #ECEFF4;
}

#display_previous {
    font-size: 4vh;
    vertical-align: middle;
    line-height: 8vh;
    color: #ECEFF4;
}

/* || buttons properties*/

/* || || properties for button types */

.number_div{
    height: 7vh;
    vertical-align: middle;
    line-height: 7vh;
    box-sizing: border-box;
    border: none;
    background-color: #3b4252;
}

.function_button{
    width: 17vh;
    background-color: #D08770;
    background-size: 8vh;
    border-color: #D08770;
}

.function_button:hover{
    background-color: #da9e8b;
    border-color: #da9e8b;
}

.function_button:active{
    border-color: #ECEFF4;
}

.digit{
    border-color: #3b4252;
    background-color: #3b4252;
}

.digit:hover{
    border-color: #4C566A;
    background-color: #4C566A;
}
.digit:hover > div{
    border-color: #4C566A;
    background-color: #4C566A;
}

.digit:active{
    border-color: #ECEFF4;
}

#dot{
    border-color: #3b4252;
    background-color: #3b4252;
}

#dot:hover{
    border-color: #4C566A;
    background-color: #4C566A;
}

#dot:hover > div{
    border-color: #4C566A;
    background-color: #4C566A;
}

#dot:active{
    border-color: #ECEFF4;
}

.operator{
    border-color: #5E81AC;
    background-size: 4vh;
    background-color: #5E81AC;
}

.operator:hover{
    border-color: #81a1c1;
    background-color: #81a1c1;
}

.operator:active{
    border-color: #ECEFF4;
}

.equals{
    border-color: #5E81AC;
    background-size: 4vh;
    background-color: #5E81AC;    
}

.equals:hover{
    border-color: #81a1c1;
    background-size: 4vh;
    background-color: #81a1c1;    
}

.equals:active{
    border-color: #ECEFF4;
}

/* || || properties for individual buttons */
#clear{
    background-image: url('assets/clear.svg');
}

#backspace{
    background-image: url('assets/Backspace.svg');
}

#plus{
    background-image: url('assets/Plus.svg');
}

#minus{
    background-image: url('assets/minus.svg');
}

#divide{
    background-image: url('assets/Divide.svg');
}

#multiply{
    background-image: url('assets/Multiply.svg');
}

#equals{
    background-image: url('assets/Equals.svg');
}

